packages/preview/pycantonese-parser/0.1.0/README.md
PyCantonese Parser
===

A Typst package to render Cantonese text with Jyutping (粵拼) from "Cantonese
words JSON array" generated from the python script below.

![package output](pycanto_parser.png)

Prerequisites
---

[PyCantonese](https://pycantonese.org) must be installed in your Python environment:

```bash
pip install pycantonese
```

```py
import pycantonese
import json
import sys

text = sys.argv[1]

words = pycantonese.segment(text)

result = []
for word in words:
    pairs = pycantonese.characters_to_jyutping(word)
    jyutping = pairs[0][1] if pairs and pairs[0][1] else None
    result.append({"word": word, "jyutping": jyutping})

print(json.dumps(result, ensure_ascii=False, indent=2))
```

This script takes a Chinese string as the user input, and outputs it as a JSON
array of "Cantonese word groups objects", which is a JSON object with

- `word`: the word group
- `jyutping`: the Cantonese romanization of the word

Usage
---

1. Save the above python script (as `test_pycanto.py`).
1. Run `python test_pycanto.py "[YOUR_TEXT]" > [OUTPUT_FILENAME]` to save the
script's output.

    ```sh
    $ python test_pycanto.py "撩稜嘅字，就算係" > output.json
    $ cat output.json
    [
      {
        "word": "𠮩𠹌",
        "jyutping": "liu1lang1"
      },
      {
        "word": "嘅",
        "jyutping": "ge3"
      },
      …
    ```

1. In your typst file, import this package and load the JSON data file, before
calling the `render-word-groups` function.

    ```typ
    #import "@preview/pycantonese-parser:0.1.0": *
    // set to any font that supports Cantonese characters (粵字)
    #set text(24pt, font: "Chiron Hei HK")
    #set par(justify: true)
    // JSON files generated by `python test_pycanto.py "用戶輸入" > outputX.json`
    #let data1 = json("output1.json")
    #let data2 = json("output2.json")
    // override default style in "src/renderer.typ" (optional)
    #let my-style = (
      jp-color: rgb(255, 128, 0),
      jp-size: 0.6em,
    )

    你識唔識講廣東話？就算你識講廣東話都好，有時都會遇到啲好 #render-word-groups(data1, style: my-style) 粵語
    #render-word-groups(data2, visual-tones: false)
    所以，我呢個 package 一定幫到你。
    ```

License
---

MIT
